[package]
version = "0.1.0"
name = "fastfib-lurk"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sphinx-core = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
loam = { git = "https://github.com/argumentcomputer/lurk", branch = "main"}
p3-baby-bear = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-field = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
