[package]
version = "0.1.0"
name = "fastfib-sphinx-script"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sphinx-sdk = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
sphinx-core = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
